--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "better-sqlite3": "^11.5.0",
     "core-js": "^3.8.3",
     "dotenv": "^8.6.0",
     "express": "^4.21.1",
     "mongoose": "^5.12.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
     "vuex": "^4.1.0",
