Optimize duration display and add fontawesome.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.5.0",
     "core-js": "^3.8.3",
