--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "better-sqlite3": "^11.5.0",
     "core-js": "^3.8.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^8.6.0",
     "express": "^4.21.1",
     "mongoose": "^5.12.3",
